# Image_classification_deep_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
output/: test_mnist.csv  val_mnist.csv
src/: predict.py  train.py
src/DL/: classification_dl.py
src/common/: datakeywords.py  extract-lecun-mnist.py  train_test_split.py  utils.py
src/config/: config.py  config_predict.py  config_predict.yaml  config_train.py  config_train.yaml
src/models/: model.py
